tests/NormalTests/paczka1/fuzzy1/50285555.err
Error in line 14: kvi18 A876 36,5
Error in line 27: 7Mrl2 S149 50,6
Error in line 16: rOP S149 93,6
